# ado-swarm

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  mise.toml  pyproject.toml  roadmap_implementation_evidence_2026-06-01.md
.claude/: settings.json
docs/: architecture.md  codebase-review-2026-05.md  implementation-plan-2026-06.md  implementation-plan.md  skills.md  tools-skills-review.md
docs/ci/: README.md  github-actions-ci.yml
docs/concepts/: agents-tools-skills.md
docs/decisions/: ADR-0001-temporal-control-plane.md  ADR-0002-provider-neutral-source-adapters.md  ADR-0003-model-gateway.md  ADR-0004-strands-temporal-harness-runtime.md  ADR-0005-tool-policy-approvals-and-budgets.md  ADR-0006-casefile-agent-pipeline.md  ADR-0007-temporal-casefile-pipeline-execution.md  ADR-0008-model-driven-agents-on-strands.md  ADR-0009-bounded-swarm-and-approval-gated-tools.md  ADR-0010-observability-and-provider-contract-pinning.md  ADR-0011-roadmap-hardening-and-test-evidence.md
docs/operations/: harness-runtime.md  local-development.md  model-provider-switching.md  remote-services.md  richer-agent-pipeline.md
examples/tickets/: sample_provider_issue.json
migrations/: 0001_runtime_schema.sql  0002_harness_runtime.sql
src/ado_swarm/: __init__.py  config.py
tests/integration/: test_provider_tool_runtime.py  test_real_provider_http_contracts.py
tests/unit/: test_adjudication_swarm.py  test_agent_metadata_validation.py  test_agent_registry.py  test_budget_capture.py  test_catalog_knowledge_provider.py  (+29 more)
(+166 files in other folders)
