[project]
name = "ado-swarm"
version = "0.1.0"
description = "Temporal-orchestrated agent swarm for Azure DevOps and GitHub security remediation workflows"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "asyncpg>=0.29",
  "defusedxml>=0.7",
  "fastapi>=0.111",
  "httpx>=0.27",
  "neo4j>=5.26",
  "orjson>=3.10",
  "packaging>=24.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "structlog>=24.1",
  "temporalio>=1.7",
  "strands-agents>=1.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
models = [
  "boto3>=1.34",
  "litellm>=1.60",
  "ollama>=0.4",
  "openai>=1.50",
]
graphiti = ["graphiti-core>=0.17"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "opentelemetry-api>=1.28",
  "opentelemetry-sdk>=1.28",
  "ruff>=0.8",
  "ty>=0.0.1a8",
]

[project.scripts]
ado-swarm = "ado_swarm.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ado_swarm"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "TID", "N", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
